// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`oid.sql > line 7 1`] = `
[
  "INSERT INTO OID_TBL(f1) VALUES ('1234')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 20,
                  "name": "f1",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "oid_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 32,
                            "sval": {
                              "sval": "1234",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`oid.sql > line 29 1`] = `
[
  "SELECT * FROM OID_TBL",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "oid_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`oid.sql > line 32 1`] = `
[
  "SELECT pg_input_is_valid('1234', 'oid')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 25,
                            "sval": {
                              "sval": "1234",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 33,
                            "sval": {
                              "sval": "oid",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_input_is_valid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`oid.sql > line 45 1`] = `
[
  "SELECT o.* FROM OID_TBL o WHERE o.f1 = 1234",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "o",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "oid_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "o",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "o",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
                "location": 37,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1234,
                    },
                    "location": 39,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`oid.sql > line 47 1`] = `
[
  "SELECT o.* FROM OID_TBL o WHERE o.f1 <> '1234'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "o",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "oid_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "o",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "o",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
                "location": 37,
                "name": [
                  {
                    "String": {
                      "sval": "<>",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 40,
                    "sval": {
                      "sval": "1234",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`oid.sql > line 49 1`] = `
[
  "SELECT o.* FROM OID_TBL o WHERE o.f1 <= '1234'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "o",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "oid_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "o",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "o",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
                "location": 37,
                "name": [
                  {
                    "String": {
                      "sval": "<=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 40,
                    "sval": {
                      "sval": "1234",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`oid.sql > line 51 1`] = `
[
  "SELECT o.* FROM OID_TBL o WHERE o.f1 < '1234'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "o",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "oid_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "o",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "o",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
                "location": 37,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 39,
                    "sval": {
                      "sval": "1234",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`oid.sql > line 53 1`] = `
[
  "SELECT o.* FROM OID_TBL o WHERE o.f1 >= '1234'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "o",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "oid_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "o",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "o",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
                "location": 37,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 40,
                    "sval": {
                      "sval": "1234",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`oid.sql > line 55 1`] = `
[
  "SELECT o.* FROM OID_TBL o WHERE o.f1 > '1234'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "o",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "oid_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "o",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "o",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
                "location": 37,
                "name": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 39,
                    "sval": {
                      "sval": "1234",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`oid.sql > line 57 1`] = `
[
  "DROP TABLE OID_TBL",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "oid_tbl",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
